packages/beynac/src/test-utils/source/__fixtures__/errors/bad-contracts-import.ts
import { BaseClass } from "../../../../utils";
import { Something } from "../contracts";

export class MyClass extends BaseClass {
	value = Something;
}
